refactor: :zap: refactored new changes.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"flowbite": "^2.3.0",
+		"flowbite-svelte": "^0.44.24",
+		"i": "^0.3.7",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
